src/test/ui/macros/macro-path-prelude-fail-4.stderr
error: macro `inline` may not be used for derive attributes
  --> $DIR/macro-path-prelude-fail-4.rs:1:10
   |
LL | #[derive(inline)]
   |          ^^^^^^

error: aborting due to previous error

