src/test/ui/macros/macro-path-prelude-fail-4.rs
#[derive(inline)] //~ ERROR macro `inline` may not be used for derive attributes
struct S;

fn main() {}
